Remove duplicated UMA recording when destructing SafeBrowsingErrorUI. Unlike SSL interstitial, when destructing safe browsing interstitial, SafeBrowsingBlockingPage::OnDontProceed() function gets called. This function takes cares of recording the DONT_PROCEED action. Therefore, no need to recording DONT_PROCEED in SafeBrowsingErrorUI's destructor.

BUG=675786

Review-Url: https://codereview.chromium.org/2594453002
Cr-Commit-Position: refs/heads/master@{#439672}

Former-commit-id: 19f322ce5c257661c75c178315db05f342dec57c